examples/kubernetes-ingress-example/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theapp
spec:
  selector:
    matchLabels:
      app: theapp
  replicas: 2 # tells deployment to run n pods matching the template
  template:
    metadata:
      labels:
        app: theapp
    spec:
      containers:
        - name: theapp
          image: learnk8s/app:1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "250m"
              memory: "100Mi"
